test/fails/bad_generics/declare6.lgl
tag pos is vec<3>;
tag color is vec<3>;
tag tinted is color;

declare float dot<`t : vec>(`t x, `t y);

// This could be even more powerful, but we're not there yet
declare `t normalize<`t : vec>(t x);

float normed_dot<`t : vec>(`t x, `t y) {
    `t normx = normalize<`t>(x);
    `t normy = normalize<`t>(y);
    return dot<`t>(normx, normy);
}

void main() {
    pos x = [1., 2., 3.];
    color red = [1., 0., 0.];
    float fail = dot<vec<2>>(x, red);  // The intended bug catch
}